# h5io_browser

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  README.md  pyproject.toml
.ci_support/: environment-old.yml  environment.yml  release.py
.github/workflows/: automerge.yml  deploy.yml  notebooks.yml  pipeline.yml  pypicheck.yml  unittests.yml
h5io_browser/: __init__.py  _version.py  base.py  future.py  pointer.py
notebooks/: example.ipynb  hierarchical_dict.ipynb
tests/: test_base.py  test_future.py  test_pointer.py
