[build-system]
requires = ["h5io", "h5py", "numpy", "pandas", "hatchling==1.27.0", "hatch-vcs==0.5.0"]
build-backend = "hatchling.build"

[project]
name = "h5io_browser"
description = "Easy navigation and data storage for HDF5"
authors = [
    { name = "Jan Janssen", email = "janssen@mpie.de" },
]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["hdf5", "h5io"]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "h5io==0.2.5",
    "h5py==3.14.0",
    "numpy==2.3.2",
    "pandas==2.3.1",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/h5io/h5io_browser"
Documentation = "https://github.com/h5io/h5io_browser"
Repository = "https://github.com/h5io/h5io_browser"

[project.optional-dependencies]
pytables = [
    "tables==3.10.2",
]

[tool.hatch.build]
include = [
    "h5io_browser"
]

[tool.hatch.build.hooks.vcs]
version-file = "h5io_browser/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "h5io_browser"
]

[tool.hatch.build.targets.wheel]
packages = [
    "h5io_browser"
]

[tool.hatch.version]
source = "vcs"
path = "h5io_browser/_version.py"

[tool.coverage.run]
omit = ["h5io_browser/_version.py", "tests/*"]
command_line = "-m unittest discover tests"